--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,13 @@
             <artifactId>flying-saucer-core</artifactId>
             <version>9.1.22</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.alibaba/fastjson -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>2.0.8</version>
+        </dependency>
+
     </dependencies>
 
     <build>
